--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,19 @@
 {
-    "name": "English",
-    "lang_code": "en",
-    "description": "Just base english",
+    "name": "Indonesian",
+    "lang_code": "id",
+    "description": "Indonesian translation by mahfy3w",
     "link": "",
     "monospace_fonts": false,
     "special_mode": false,
     "enable_translated_songs_switch": false,
-    "translator_mode": false,
+    "translator_mode": true,
     "line_height_factor": 1,
-    "files_url": "https://raw.githubusercontent.com/Lazy-Desman/EngDeltranslatePack/refs/heads/main/",
-    "datas_url": [
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_menu.win",
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch1.win",
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch2.win",
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch3.win",
-        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch4.win"
-    ]
+//    "files_url": "https://raw.githubusercontent.com/Lazy-Desman/EngDeltranslatePack/refs/heads/main/",
+//    "datas_url": [
+//        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_menu.win",
+//        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch1.win",
+//        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch2.win",
+//        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch3.win",
+//        "https://github.com/Lazy-Desman/DeltranslatePatch/releases/download/latest/data_ch4.win"
+//    ]
 }
